<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/product_tag_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/product_tv"
        app:layout_constraintBottom_toTopOf="@+id/nameProduct_tag_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/above_guid"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/nameProduct_tag_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/name_tv"
        app:layout_constraintBottom_toTopOf="@+id/descriptionProduct_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_tag_tv" />

    <EditText
        android:id="@+id/nameProduct_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/nameProduct_tag_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/typeProduct_spn"
        app:layout_constraintTop_toTopOf="@+id/nameProduct_tag_tv" />

    <TextView
        android:id="@+id/descriptionProduct_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/description_tv"
        app:layout_constraintBottom_toTopOf="@+id/colorsProduct_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameProduct_tag_tv" />

    <TextView
        android:id="@+id/imageProduct_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/photo_tv"
        app:layout_constraintBottom_toTopOf="@+id/below_guid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorsProduct_tv" />

    <Button
        android:id="@+id/saveProduct_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/typeProduct_spn"
        android:layout_width="246dp"
        android:layout_height="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/product_tag_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_tag_tv" />

    <ImageView
        android:id="@+id/imageProduct_iv"
        android:layout_width="98dp"
        android:layout_height="87dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageProduct_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/descriptionProduct_et"
        app:layout_constraintTop_toTopOf="@+id/imageProduct_tv"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/colorsProduct_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/colors_tv"
        app:layout_constraintBottom_toTopOf="@+id/imageProduct_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionProduct_tv" />

    <EditText
        android:id="@+id/descriptionProduct_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/descriptionProduct_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nameProduct_et"
        app:layout_constraintTop_toTopOf="@+id/descriptionProduct_tv" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/title_tv"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/above_guid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/above_guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="71dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/below_guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="88dp" />

</androidx.constraintlayout.widget.ConstraintLayout>